--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "camelcase": "off",
         "no-param-reassign": [
             "error",
             {
