--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "off",
         "camelcase": "off",
         "no-param-reassign": [
             "error",
