--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,9 +18,12 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "react-hooks"
     ],
     "rules": {
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "no-unused-vars": "off",
@@ -53,7 +56,8 @@
                 "ts": "never",
                 "tsx": "never"
             }
-        ]
+        ],
+        "linebreak-style": "off"
     },
     "settings": {
         "import/resolver": {
